--- a/css/pages/block/menu.css
+++ b/css/pages/block/menu.css
@@ -1,33 +1,3 @@
-*,
-::before,
-::after {
-  margin: 0;
-  padding: 0;
-  outline: none;
-  vertical-align: baseline;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: TTCommons;
-  background-color: #f4f4f6;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  cursor: default;
-}
-
-a {
-  text-decoration: none;
-  background-color: transparent;
-  color: inherit;
-}
-
 /* menu */
 .main-nav__item_active {
   background-color: #BFC0C4;
@@ -154,8 +124,8 @@ a {
 
 .user-settings {
   border: 1px solid;
-  -webkit-mask: url(../../../img/settings.svg) no-repeat center;
-  mask: url(../../../img/settings.svg) no-repeat center;
+  -webkit-mask: url(../img/settings.svg) no-repeat center;
+  mask: url(../img/settings.svg) no-repeat center;
   -webkit-mask-size: 24px 24px;
   mask-size: 24px 24px;
 }
