--- a/css/pages/u_modules.css
+++ b/css/pages/u_modules.css
@@ -24,173 +24,6 @@ body {
 
 a {
   text-decoration: none;
-  background-color: transparent;
-  color: inherit;
-}
-
-*,
-::before,
-::after {
-  margin: 0;
-  padding: 0;
-  outline: none;
-  vertical-align: baseline;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: TTCommons;
-  background-color: #f4f4f6;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  cursor: default;
-}
-
-a {
-  text-decoration: none;
-  background-color: transparent;
-  color: inherit;
-}
-
-.body__header {
-  height: 0px !important;
-}
-
-.header__btn {
-  top: 22px;
-  margin-left: 20px;
-}
-
-.header__box {
-  padding: 0 !important;
-  margin: 0 !important;
-}
-
-/* Header */
-.header__box {
-  padding-left: 20px;
-}
-
-.header__btn {
-  margin-top: -6px;
-}
-
-.header__btn .btn__content {
-  border: 0;
-  padding: 0;
-}
-
-.header__btn .btn__content_large {
-  padding: 0;
-  min-width: 0;
-}
-
-.header__title {
-  margin-top: 5px;
-}
-
-@media (min-width: 375px) {
-  /* Header */
-  .header__box {
-    padding-bottom: 20px;
-  }
-  .header__btn {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: left;
-  }
-}
-
-@media (min-width: 768px) {
-  /* Header */
-  .header-btn {
-    -webkit-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
-    transition: all 0.2s linear;
-  }
-  .header-btn:hover {
-    background-color: #481E8C;
-    -webkit-box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.5);
-    box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.5);
-  }
-  .header-btn:hover .header-btn__text {
-    color: white;
-  }
-  .header-btn:hover .btn__icon_arrow-left:after {
-    background-color: white;
-  }
-  .header__box {
-    max-width: 1301px;
-    position: relative;
-  }
-  .header__btn {
-    position: absolute;
-    z-index: 10;
-    border: 1px solid #481E8C;
-    width: 200px;
-    height: 40px;
-    top: 72px;
-    margin-right: 20px;
-    right: 0;
-    border-radius: 5px;
-  }
-  .header-btn__text {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: left;
-    padding-left: 15px;
-  }
-  .lessons__main .title {
-    max-width: calc(100% - 220px);
-  }
-}
-
-@media (min-width: 1000px) {
-  .menu {
-    display: none;
-  }
-  /* Header */
-}
-
-*,
-::before,
-::after {
-  margin: 0;
-  padding: 0;
-  outline: none;
-  vertical-align: baseline;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: TTCommons;
-  background-color: #f4f4f6;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  cursor: default;
-}
-
-a {
-  text-decoration: none;
-  background-color: transparent;
   color: inherit;
 }
 
@@ -320,8 +153,8 @@ a {
 
 .user-settings {
   border: 1px solid;
-  -webkit-mask: url(../../../img/settings.svg) no-repeat center;
-  mask: url(../../../img/settings.svg) no-repeat center;
+  -webkit-mask: url(../img/settings.svg) no-repeat center;
+  mask: url(../img/settings.svg) no-repeat center;
   -webkit-mask-size: 24px 24px;
   mask-size: 24px 24px;
 }
@@ -377,37 +210,6 @@ body {
 
 a {
   text-decoration: none;
-  background-color: transparent;
-  color: inherit;
-}
-
-*,
-::before,
-::after {
-  margin: 0;
-  padding: 0;
-  outline: none;
-  vertical-align: baseline;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: TTCommons;
-  background-color: #f4f4f6;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  cursor: default;
-}
-
-a {
-  text-decoration: none;
-  background-color: transparent;
   color: inherit;
 }
 
@@ -537,8 +339,8 @@ a {
 
 .user-settings {
   border: 1px solid;
-  -webkit-mask: url(../../../img/settings.svg) no-repeat center;
-  mask: url(../../../img/settings.svg) no-repeat center;
+  -webkit-mask: url(../img/settings.svg) no-repeat center;
+  mask: url(../img/settings.svg) no-repeat center;
   -webkit-mask-size: 24px 24px;
   mask-size: 24px 24px;
 }
@@ -1554,6 +1356,118 @@ a {
   }
 }
 
+.body__header {
+  height: 0px !important;
+}
+
+.header__btn {
+  top: 22px;
+  margin-left: 20px;
+}
+
+.header__box {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+/* Header */
+.header__box {
+  padding-left: 20px;
+}
+
+.header__btn {
+  margin-top: -6px;
+}
+
+.header__btn .btn__content {
+  border: 0;
+  padding: 0;
+}
+
+.header__btn .btn__content_large {
+  padding: 0;
+  min-width: 0;
+}
+
+.header__title {
+  margin-top: 5px;
+}
+
+@media (min-width: 375px) {
+  /* Header */
+  .header__box {
+    padding-bottom: 20px;
+  }
+  .header__btn {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+}
+
+@media (min-width: 541px) {
+  .progress-bar {
+    margin-top: 25px;
+  }
+}
+
+@media (min-width: 768px) {
+  /* Header */
+  .header-btn {
+    -webkit-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear;
+  }
+  .header-btn:hover {
+    background-color: #481E8C;
+    -webkit-box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.5);
+  }
+  .header-btn:hover .header-btn__text {
+    color: white;
+  }
+  .header-btn:hover .btn__icon_arrow-left:after {
+    background-color: white;
+  }
+  .header__box {
+    max-width: 1301px;
+    position: relative;
+  }
+  .header__btn {
+    position: absolute;
+    z-index: 10;
+    border: 1px solid #481E8C;
+    width: 200px;
+    height: 40px;
+    top: 72px;
+    margin-right: 20px;
+    right: 0;
+    border-radius: 5px;
+  }
+  .header-btn__text {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;
+    padding-left: 15px;
+  }
+  .lessons__main .title {
+    max-width: calc(100% - 220px);
+  }
+}
+
+@media (min-width: 1000px) {
+  .menu {
+    display: none;
+  }
+  /* Header */
+}
+
 .progress-bar__wrapper {
   margin: 20px 14px 0;
   padding: 0 14px;
@@ -1796,8 +1710,8 @@ a {
 }
 
 .module__checkbox:not(checked) ~ .module__roll-up::after {
-  -webkit-mask-image: url(../../img/angle-up-solid.svg);
-  mask-image: url(../../img/angle-up-solid.svg);
+  -webkit-mask-image: url(../img/angle-up-solid.svg);
+  mask-image: url(../img/angle-up-solid.svg);
   background-color: #BFC0C4;
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
@@ -1808,8 +1722,8 @@ a {
 }
 
 .module__checkbox:checked ~ .module__roll-up::after {
-  -webkit-mask-image: url(../../img/angle-down-solid.svg);
-  mask-image: url(../../img/angle-down-solid.svg);
+  -webkit-mask-image: url(../img/angle-down-solid.svg);
+  mask-image: url(../img/angle-down-solid.svg);
   background-color: #BFC0C4;
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
@@ -1860,6 +1774,7 @@ a {
   -webkit-box-pack: start;
   -ms-flex-pack: start;
   justify-content: flex-start;
+  max-width: calc(100% - 20px);
 }
 
 .module-header__item {
@@ -1897,6 +1812,7 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
 }
 
 .module-header__title span {
@@ -1906,7 +1822,7 @@ a {
   line-height: 23px;
   letter-spacing: 0em;
   text-align: left;
-  max-width: calc(100% - 20px);
+  min-width: 100%;
 }
 
 .module-header__content {
@@ -2631,6 +2547,9 @@ a {
     letter-spacing: 0em;
     text-align: left;
   }
+  .module-header {
+    max-width: calc(100% - 80px);
+  }
   .module-header__id {
     font-size: 30px;
     font-style: normal;
@@ -2644,7 +2563,6 @@ a {
   }
   .module-header__title {
     width: auto;
-    margin-left: 5px;
   }
   .module-header__title span {
     font-size: 20px;
@@ -2704,6 +2622,12 @@ a {
     justify-content: flex-start;
     margin-left: 5px;
     margin-top: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-direction: row;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
   }
   .module-header__elem {
     width: auto;
@@ -2973,7 +2897,18 @@ a {
   }
 }
 
+@media (min-width: 692px) {
+  .module-header__title .title {
+    -webkit-transform: translateX(-12px);
+    -ms-transform: translateX(-12px);
+    transform: translateX(-12px);
+  }
+}
+
 @media (min-width: 768px) {
+  .menu {
+    display: none;
+  }
   .module-top + .block-delimiter {
     display: block;
   }
@@ -3360,7 +3295,15 @@ a {
     margin-bottom: 10px;
   }
   .estimation__item:last-child {
-    margin-right: 15px;
+    margin-right: 0px;
+  }
+  .estimation__title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
   .courses__open {
     -webkit-transition: all 0.2s linear;
@@ -3395,8 +3338,8 @@ a {
   .courses__open span {
     width: 38px;
     height: 20px;
-    -webkit-mask-image: url(../../img/arrow-right.svg);
-    mask-image: url(../../img/arrow-right.svg);
+    -webkit-mask-image: url(../img/arrow-right.svg);
+    mask-image: url(../img/arrow-right.svg);
     background-color: #481E8C;
     -webkit-mask-repeat: no-repeat;
     mask-repeat: no-repeat;
@@ -3440,6 +3383,14 @@ a {
   }
   .module-about__inner img {
     right: 30px;
+  }
+}
+
+@media (min-width: 1010px) {
+  .available-course__side img {
+    -webkit-transform: translateY(20%);
+    -ms-transform: translateY(20%);
+    transform: translateY(20%);
   }
 }
 
@@ -3538,15 +3489,7 @@ a {
   }
 }
 
-@media (min-width: 976px) {
-  .available-course__side img {
-    -webkit-transform: translateY(20%);
-    -ms-transform: translateY(20%);
-    transform: translateY(20%);
-  }
-}
-
-@media (min-width: 1055px) {
+@media (min-width: 1080px) {
   .module-vk__inner {
     height: 140px;
   }
@@ -3699,9 +3642,6 @@ a {
   .module-header__status {
     width: 165px;
   }
-  .module-header__btn-inner .btn {
-    margin-right: 15px;
-  }
   .module-header__raiting {
     margin-right: 15px;
     font-size: 24px;
@@ -3821,7 +3761,7 @@ a {
   }
 }
 
-@media (min-width: 1360px) {
+@media (min-width: 1400px) {
   .courses__open {
     right: -41%;
   }
