--- a/css/pages/u_modules.css
+++ b/css/pages/u_modules.css
@@ -4,21 +4,11 @@
   margin: 0;
   padding: 0;
   outline: none;
-  vertical-align: baseline;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 body {
-  font-family: TTCommons;
-  background-color: #f4f4f6;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
   cursor: default;
 }
 
@@ -153,8 +143,8 @@ a {
 
 .user-settings {
   border: 1px solid;
-  -webkit-mask: url(../img/settings.svg) no-repeat center;
-  mask: url(../img/settings.svg) no-repeat center;
+  -webkit-mask: url(../../img/settings.svg) no-repeat center;
+  mask: url(../../img/settings.svg) no-repeat center;
   -webkit-mask-size: 24px 24px;
   mask-size: 24px 24px;
 }
@@ -190,21 +180,11 @@ a {
   margin: 0;
   padding: 0;
   outline: none;
-  vertical-align: baseline;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 body {
-  font-family: TTCommons;
-  background-color: #f4f4f6;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
   cursor: default;
 }
 
@@ -339,8 +319,8 @@ a {
 
 .user-settings {
   border: 1px solid;
-  -webkit-mask: url(../img/settings.svg) no-repeat center;
-  mask: url(../img/settings.svg) no-repeat center;
+  -webkit-mask: url(../../img/settings.svg) no-repeat center;
+  mask: url(../../img/settings.svg) no-repeat center;
   -webkit-mask-size: 24px 24px;
   mask-size: 24px 24px;
 }
@@ -1710,8 +1690,8 @@ a {
 }
 
 .module__checkbox:not(checked) ~ .module__roll-up::after {
-  -webkit-mask-image: url(../img/angle-up-solid.svg);
-  mask-image: url(../img/angle-up-solid.svg);
+  -webkit-mask-image: url(../../img/angle-up-solid.svg);
+  mask-image: url(../../img/angle-up-solid.svg);
   background-color: #BFC0C4;
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
@@ -1722,8 +1702,8 @@ a {
 }
 
 .module__checkbox:checked ~ .module__roll-up::after {
-  -webkit-mask-image: url(../img/angle-down-solid.svg);
-  mask-image: url(../img/angle-down-solid.svg);
+  -webkit-mask-image: url(../../img/angle-down-solid.svg);
+  mask-image: url(../../img/angle-down-solid.svg);
   background-color: #BFC0C4;
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
@@ -2698,7 +2678,9 @@ a {
     width: 100%;
     height: 100%;
     padding: 0;
-    margin-top: 5px;
+  }
+  .module-main__inner {
+    padding-top: 20px;
   }
   .progress-bar__text {
     font-size: 16px;
@@ -3338,8 +3320,8 @@ a {
   .courses__open span {
     width: 38px;
     height: 20px;
-    -webkit-mask-image: url(../img/arrow-right.svg);
-    mask-image: url(../img/arrow-right.svg);
+    -webkit-mask-image: url(../../img/arrow-right.svg);
+    mask-image: url(../../img/arrow-right.svg);
     background-color: #481E8C;
     -webkit-mask-repeat: no-repeat;
     mask-repeat: no-repeat;
@@ -3350,14 +3332,6 @@ a {
     -webkit-transform: translateX(23px);
     -ms-transform: translateX(23px);
     transform: translateX(23px);
-  }
-  .courses:hover {
-    cursor: pointer;
-    -webkit-box-shadow: 0px 10px 20px rgba(8, 15, 32, 0.08);
-    box-shadow: 0px 10px 20px rgba(8, 15, 32, 0.08);
-  }
-  .courses:hover .available-course__side .courses__open {
-    opacity: 1;
   }
   .courses.light .available-course__side .courses__open {
     color: white;
@@ -3477,7 +3451,6 @@ a {
   }
   .module-main__side {
     width: auto;
-    margin-top: 10px;
   }
   .module-main__image {
     width: 389px;
@@ -3663,7 +3636,7 @@ a {
   .module-main {
     padding-right: 0;
     padding-left: 55px;
-    padding-top: 8px;
+    padding-top: 0px;
   }
   .module-main__text {
     font-size: 16px;
@@ -3674,7 +3647,7 @@ a {
     text-align: left;
   }
   .module-main__wrapper {
-    margin-top: 0;
+    margin-top: 20px;
     padding-top: 0px;
   }
   .module-main__inner {
@@ -3831,5 +3804,13 @@ a {
   }
   .estimation__item:last-child {
     margin-right: 0;
+  }
+  .courses:hover {
+    cursor: pointer;
+    -webkit-box-shadow: 0px 10px 20px rgba(8, 15, 32, 0.08);
+    box-shadow: 0px 10px 20px rgba(8, 15, 32, 0.08);
+  }
+  .courses:hover .available-course__side .courses__open {
+    opacity: 1;
   }
 }
