--- a/css/pages/a_about-company.css
+++ b/css/pages/a_about-company.css
@@ -9,10 +9,36 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   cursor: default;
 }
 
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.container {
+  width: calc(100%);
+  margin-left: 70px;
+}
+
+@media (min-width: 1001px) {
+  .header__box {
+    padding: 20px 0 0 60px;
+    height: 100px;
+    background-color: white;
+  }
+  .header__box h3 {
+    font-size: 37px;
+    -webkit-transform: translate(0px, 15px);
+    -ms-transform: translate(0px, 15px);
+    transform: translate(0px, 15px);
+  }
 }
