--- a/css/pages/u_lesson.css
+++ b/css/pages/u_lesson.css
@@ -1898,7 +1898,7 @@ a {
     position: relative;
     top: 0;
     left: 0;
-    width: 1120px;
+    width: auto;
     height: auto;
     margin: 120px auto 40px;
     overflow: hidden;
