--- a/css/pages/block/deal-card.css
+++ b/css/pages/block/deal-card.css
@@ -198,7 +198,11 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   width: 100%;
+  height: 20px;
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end;
