--- a/css/pages/block/clients-card.css
+++ b/css/pages/block/clients-card.css
@@ -99,6 +99,12 @@ a {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
 .clients__field:first-child {
@@ -118,7 +124,7 @@ a {
   mask-position: center;
   -webkit-mask-size: 16px 9px;
   mask-size: 16px 9px;
-  background-color: #BFC0C4;
+  background-color: #bfc0c4;
   width: 16px;
   height: 9px;
   display: inline-block;
@@ -134,7 +140,7 @@ a {
   mask-position: center;
   -webkit-mask-size: 10px 10px;
   mask-size: 10px 10px;
-  background-color: #BFC0C4;
+  background-color: #bfc0c4;
   width: 10px;
   height: 10px;
   display: inline-block;
@@ -150,7 +156,7 @@ a {
   mask-position: center;
   -webkit-mask-size: 12px 12px;
   mask-size: 12px 12px;
-  background-color: #BFC0C4;
+  background-color: #bfc0c4;
   width: 12px;
   height: 12px;
   display: inline-block;
@@ -181,7 +187,7 @@ a {
   mask-position: center;
   -webkit-mask-size: 12px 12px;
   mask-size: 12px 12px;
-  background-color: #BFC0C4;
+  background-color: #bfc0c4;
   width: 12px;
   height: 12px;
   display: inline-block;
@@ -197,9 +203,39 @@ a {
   mask-position: center;
   -webkit-mask-size: 10px 10px;
   mask-size: 10px 10px;
-  background-color: #BFC0C4;
+  background-color: #bfc0c4;
   width: 10px;
   height: 10px;
   display: inline-block;
   margin-right: 10px;
+}
+
+.clients__who {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.clients__date {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0em;
+  text-align: left;
 }
